# MR-EXPRESS

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-1-Backend-FastAPI-va-SQLAlchemy-LIMIT-larni-olib-tashla_1780085438649.txt  Pasted-Forget-about-specific-product-examples-like-electronics_1780143465837.txt  Pasted-Mavzu-React-FastAPI-SQLite-do-konida-mahsulotlar-soniga_1780085408774.txt
mr express/: .gitignore  README.md  docker-compose.yml
mr express admin/: README.md  start-dev.ps1
mr express admin/backend/: .env.example  requirements.txt  run_api.py
mr express admin/backend/app/: main.py
mr express admin/backend/app/core/: config.py
mr express admin/docs/: API_ENDPOINTS.md  ARCHITECTURE.md  DATABASE_SCHEMA.md
mr express admin/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mr express admin/frontend/src/: App.tsx  index.css
mr express/backend/: .env.example  mrexpress.db  mrexpress.db-shm  mrexpress.db-wal  requirements.txt  run_api.py  run_bot.py
mr express/backend/app/: config.py  database.py  main.py
mr express/backend/bot/: main.py  regions.json  uzbekistan_regions.py
mr express/backend/data/: mrexpress.db  mrexpress.db-shm  mrexpress.db-wal
mr express/backend/database/: init.sql  init_sqlite.sql
mr express/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
mr express/frontend/src/: App.jsx  api.js  index.css  main.jsx
mr express/scripts/: start-telegram.ps1
(+94 files in other folders)
